<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name" translatable="false"></string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_shopping">Shopping</string>
    <string name="title_activity_hotels">Hotels</string>
    <string name="title_activity_taxi">Taxi</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="title">My Buddy</string>
    <string name="title_shooping">Looking For Shopping?</string>
    <string name="title_restaurants">Looking For Restaurants?</string>
    <string name="title_taxi">Looking For Taxi?</string>
    <string name="title_hotel">Looking For Hotel?</string>
    <string name="btnhotel">Hotel</string>
    <string name="btn_shooping">Shopping</string>
    <string name="btn_restaurant">Restaurant</string>
    <string name="btn_taxi">Taxi</string>
    <string name="btn_r1">Play Music</string>
    <string name="btn_r2">Stop</string>
    <string name="textadh">Address: College Green, Westmoreland Stree Dublin (01) 645 1000</string>
    <string name="textadr">Address:College Green, Westmoreland Stree Dublin (01) 645 1000</string>
    <string name="textadt">Phone:Driver name:  (01) 645 1000</string>
    <string name="textads">Address:College Green, Westmoreland Stree Dublin (01) 645 1000</string>
    <string name="title_activity_splash_screen">My Buddy</string>
    <string name="splashtxt">My Buddy</string>
    <string name="desc">Hotels</string>
    <string name="title_activity_restaurant_image_adapter">RestaurantImageAdapter</string>
    <string name="address">Address:College Green, Westmoreland Stree Dublin (01) 645 1000</string>
    <string name="title_activity_restaurant_full_description">RestaurantFullDescription</string>
    <string name="title_activity_hotel_gallery_adapter">HotelGalleryAdapter</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_shooping_address">ShoopingAddress</string>
    <string name="title_activity_shopping_adapter">ShoppingAdapter</string>
    <string name="title_activity_hotel_full_description">HotelFullDescription</string>
    <string name="address_label">Address</string>
    <string name="description_label">Description</string>
    <string name="title_activity_taxi_adress">TaxiAdress</string>
    <string name="title_activity_taxi_adapter">TaxiAdapter</string>
    <string name="link">Add Restaurant Detail </string>
    <string name="title_activity_management">Management</string>
    <string name="create_records">ADD</string>
    <string name="view_records">VIEW</string>
    <string name="modifY_records">UPDATE</string>
    <string name="delete_records">DELETE</string>
    <string name="item_description">Description</string>
    <string name="item_image_url">Image Url</string>
    <string name="item_adress">Address</string>
    <string name="edt_item_description">Enter Description</string>
    <string name="edt_item_adress">Enter Address</string>
    <string name="edt_item_image_url">Image Url</string>
    <string name="title_activity_restaurant_add">RestaurantAddActivity</string>
    <string name="btn_view">View Db</string>
    <string name="btn_call">Call</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_back">Back</string>
    <string name="title_activity_closest_service">ClosestService</string>
    <string name="btnstop">Stop searchig</string>
    <string name="btnstart">Start searching</string>
    <string name="accuracy">Accuracy:</string>
    <string name="addressn">Address:</string>
    <string name="closestbtn">Closest Service</string>
    <string name="title_activity_admin">Admin</string>
    <string name="adminbtn">Recently visited services</string>
    <string name="title_activity_my_mapp">MyMapp</string>
    <string name="title_activity_view_address">ViewAddress</string>
    <string name="title_activity_login">Login</string>

</resources>