<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.betel.travelguide.RestaurantAddActivity" >

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_description"
        android:layout_below="@+id/edt_description"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/edt_item_adress" />

    <EditText
        android:id="@+id/image_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt_address"
        android:layout_below="@+id/edt_address"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/edt_item_image_url" />

    <Button
        android:id="@+id/add_restaurant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/image_url"
        android:layout_below="@+id/image_url"
        android:layout_marginTop="54dp"
        android:text="@string/create_records" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:hint="@string/edt_item_description" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btback"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/add_restaurant"
        android:layout_below="@+id/add_restaurant"
        android:text="Back" />

</RelativeLayout>
